--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .:/code
     restart: always
     environment:
-      - OLLAMA_HOST_URL:"http://ollama:11434"
+      OLLAMA_HOST_URL: "http://ollama:11434"
     depends_on:
       - ollama
     networks:
